# cmake-template-gcc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: inc_test.hpp  tests.h
include/logger/: logger.h
src/: CMakeLists.txt
src/logger/: logger.c
src/logger/include/logger/: logger.h
src/logger/src/: logger.c
src/tests_pthread/: test_pthread_cond_timed.c
src/tests_strings/: test_strings_concat.c  test_strings_hex_uint.c  test_strings_malloc.c  test_strings_strtok.c
